cart service added

--- a/cart/src/main/resources/application.properties
+++ b/cart/src/main/resources/application.properties
@@ -1,14 +1,16 @@
-spring.application.name=product
-server.port=8081
+spring.application.name=cart
+server.port=8083
+
+#endpoint of product service
 product.service.url=http://localhost:8081/api/product
 
+
 # sqlite congfiguration
-spring.datasource.url=jdbc:sqlite:products.db
+spring.datasource.url=jdbc:sqlite:carts.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 
+# hibernate congfiguration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.SQLiteDialect
-
-
